# BinPacker

./: AUTHORS  BinPacker  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.status  configure  configure.ac  install.sh  libtool  run_Me.sh  update
autom4te.cache/: output.1  requests  traces.1
conf8633.dir/: conf8633.file
glpk-4.40/: Makefile  config.h  config.h.in  config.status  libtool
glpk-4.40/autom4te.cache/: output.0  traces.0
sample_test/: reads.left.fq  reads.right.fq
src/: BinPacker_denovo.cc  Find_errors.cc  ILP_process.h  Makefile  Makefile.am  Makefile.in  assemble.cpp  assemble.h  change_fasta.cc  get_junction_graph.h  get_junction_graph_compulsory.h  junction_paths.h  kmerhash.h  line_graph.h  packing.cc  packing_num.cc  read_result.cc  recover_paths.h  splicing_graph.cpp  splicing_graph.h  write_ILP.h
src/.deps/: Assemble-assemble.Po  Assemble-common.Po  Assemble-kmerhash.Po  Assemble-loadreads.Po  Assemble-splicing_graph.Po  Assemble-utility.Po  BinPacker_denovo.Po  Find_errors.Po  PathSearch-compatibility_graph.Po  PathSearch-kmerhash.Po  PathSearch-matching_merge.Po  PathSearch-path_search.Po  PathSearch-reachability_bp_graph.Po  PathSearch-splicing_graph.Po  change_fasta.Po  get_reads_from_graph-compatibility_graph.Po  get_reads_from_graph-get_reads_from_graph.Po  get_reads_from_graph-kmerhash.Po  get_reads_from_graph-matching_merge.Po  get_reads_from_graph-reachability_bp_graph.Po  get_reads_from_graph-splicing_graph.Po  packing.Po  packing_num.Po  read_result.Po
src/windows/: getopt.lib
(+114 files in other folders)
